[package]
name = "ccsrs-wasm"
version = "0.1.0"
authors = ["Yannick Schillo <yschillo@yansonline.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#ccsrs = { path = "../ccsrs" }
ccsrs = { git = "https://github.com/tp971/ccsrs" }
wasm-bindgen = "0.2"

[profile.release]
# remove debug symbols:
debug = false
# enable link time optimisations:
lto = true
# optimise for size (less aggressive than z):
opt-level = 's'
